<resources>
    <string name="app_name">Blip Zone</string>
    <string name="bio">since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="feed">Feed</string>
    <string name="liked_by">Liked by StarLord, and 30 others</string>
    <string name="post_content">starlord mountains #earthporn #mountains</string>
    <string name="posted_at">3 DAYS AGO</string>
    <string name="view_all_comments">View all comments</string>
    <string name="starlord">starlord</string>
    <string name="search_hint">Search…</string>
    <string name="search_text">Type the name of user you are searching...</string>
    <string name="comments">Comments</string>
    <string name="reply">Reply</string>
    <string name="like_count">20 likes</string>
    <string name="this_is_comment">this is a comment</string>
    <string name="days_ago">3 d</string>
    <string name="likes">Likes</string>
    <string name="user_post">User\'s Posts</string>
    <string name="notifications">Notifications</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="gallery_s">Gallery</string>
    <string name="next">Next</string>
    <string name="string_share">Share</string>
    <string name="description">Write a description...</string>
    <string name="upload_progress">Your another post is uploading, please wait…</string>
    <string name="message_here">Message here...</string>
    <string name="sent_message">Hello this is a sample message</string>
    <string name="message">Message</string>
    <string name="chats">Chats</string>
    <string name="verification_text">A verification otp has been sent on your registered email. Please enter to verify.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp_message">You can resend the \nOTP after:</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="username">username</string>
    <string name="about_yourself">About yourself</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="account_information">Account Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="default_notification_channel_id">default_channel</string>
</resources>