<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F2FF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_photo_edit_profile"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:layout_marginTop="15dp"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@+id/profile_photo_edit_profile"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"/>




            <!-- first_name section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="90dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout2">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_display_name"
                    android:layout_centerVertical="true"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_name"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/first_name"
                    tools:ignore="Autofill" />

            </RelativeLayout>


            <!-- last_name section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout3"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_display_name"
                    android:layout_centerVertical="true"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/last_name"
                    tools:ignore="Autofill" />

            </RelativeLayout>


            <!-- about section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout4"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_description"
                    android:layout_centerVertical="true"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/about_yourself"
                    tools:ignore="Autofill" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                    android:text="@string/account_information"
                android:layout_below="@id/relLayout4"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/textPrivateInfo"/>


            <!-- email section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                android:layout_below="@+id/textPrivateInfo"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout5"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_email"
                    android:layout_centerVertical="true"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    tools:ignore="Autofill" />

            </RelativeLayout>

            <!-- phone number section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                android:layout_below="@+id/relLayout5"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout6"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_phone"
                    android:layout_centerVertical="true"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneNumber"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="phone"
                    android:hint="@string/phone_number"
                    tools:ignore="Autofill" />

            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>
</merge>